--- a/sass/omega-reset/variables/_variables.scss
+++ b/sass/omega-reset/variables/_variables.scss
@@ -2,6 +2,6 @@
 // Variables
 // -------------------------------------------------------------------
 
-$show_media_queries : true; // src/scss/mixins/media-query-helper.scss
+$show_media_queries : false; // src/scss/mixins/media-query-helper.scss
 
 $gutter_spacing: flex-gutter($parent-columns);
